--- a/package.json
+++ b/package.json
@@ -17,17 +17,25 @@
 		"@sveltejs/adapter-auto": "^4.0.0",
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
+		"@types/node": "^22.10.10",
+		"@types/psd": "^3.4.3",
 		"@webtoon/psd": "^0.4.0",
+		"ag-psd": "^23.1.0",
 		"autoprefixer": "^10.4.20",
 		"axios": "^1.7.9",
 		"bits-ui": "^0.22.0",
+		"buffer": "^6.0.3",
+		"canvas": "^3.1.0",
+		"client-buffer": "npm:buffer@^6.0.3",
 		"clsx": "^2.1.1",
 		"eslint": "^9.18.0",
+		"psd": "^3.4.0",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"tailwind-merge": "^2.6.0",
 		"tailwind-variants": "^0.3.1",
 		"tailwindcss": "^3.4.17",
+		"tsx": "^4.19.2",
 		"typescript": "^5.0.0",
 		"vite": "^6.0.0"
 	}
